ensure there's no min-width set on small devices, re #2885
git-svn-id: svn://develop.studip.de/studip/trunk@24277 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/mobile.less
+++ b/public/assets/stylesheets/less/mobile.less
@@ -1,5 +1,5 @@
 @media only screen and (max-width : 640px) {
-    #layout_wrapper { min-width: 0; }
+    #layout_wrapper { min-width: 0 !important; }
     .index_container {
         margin: none;
         width: auto !important;
