--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -2053,7 +2053,7 @@ span .wikitoc_editlink {
 span.wikitoc_toggler {
   font-size: 0.8em;
 }
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 768px) {
   #layout_wrapper {
     min-width: 0;
   }
